Adding order by Asc , Desc

--- a/src/assets/sass/content/home/home.scss
+++ b/src/assets/sass/content/home/home.scss
@@ -143,5 +143,15 @@ p {
 	margin-top: 10px;
 	display: flex;
 	border-radius: 20px;
-	margin-left: 20px;
+	margin-left: auto;
+}
+
+.ais-SortBy-select{
+	margin-top: -40px;
+    margin-left: 22px;
+    height: 29px;
+    border: solid black 2px;
+    border-radius: 9px;
+    width: 134px;
+	text-align: center;
 }
